# mcp-rosbags

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  refactor_all.py  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
mcp_rosbag_server/: __init__.py  server.py  server.py.bak  shared.py
mcp_rosbag_server/config/: message_schemas.yaml  server_config.yaml
mcp_rosbag_server/core/: __init__.py  cache_manager.py  message_utils.py  schema_manager.py
mcp_rosbag_server/extractors/: __init__.py  bag_management.py  bag_management_refactored.py  image.py  image_refactored.py  lidar.py  lidar_refactored.py  logging.py  logging_refactored.py  search.py  search_refactored.py  tf_tree.py  tf_tree_refactored.py  trajectory.py  trajectory_refactored.py  visualization.py  visualization_refactored.py
src/extractors/: search.py
